--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,14 @@
 <html lang="zh-TW">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://static.cdninstagram.com/rsrc.php/ye/r/lEu8iVizmNW.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://kit.fontawesome.com/0617efd5a6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
     <link id="app-theme" rel="stylesheet" href="%PUBLIC_URL%/themes/viva-dark/theme.css">
     <title>作品集</title>
