新增404.html、修正LINE分享連結、修正手機滾動及放大邏輯

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
   <head>
+
+    <title>作品集</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
+    <meta name="description" content="threads作品集，資料庫串接練習" />
+    <meta name="keywords" content="threads" />
+    <meta name="robots" content="all" />
+    <meta itemprop="name" content="threads作品集，資料庫串接練習">
+    <meta itemprop="image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Threads_%28app%29.svg/640px-Threads_%28app%29.svg.png">
+    <meta property="og:site_name" content="threads作品集" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="threads作品集" />
+    <meta property="og:description" content="threads作品集，資料庫串接練習" />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Threads_%28app%29.svg/640px-Threads_%28app%29.svg.png" />
     <link rel="icon" href="https://static.cdninstagram.com/rsrc.php/ye/r/lEu8iVizmNW.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
     <link id="app-theme" rel="stylesheet" href="%PUBLIC_URL%/themes/viva-dark/theme.css">
-    <title>作品集</title>
+    <link rel="image_src" type="image/jpeg" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Threads_%28app%29.svg/640px-Threads_%28app%29.svg.png" />
   </head>
   <body>
+    <script type="text/javascript">
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
     <noscript>此網站需使用Javascript</noscript>
     <div id="root"></div>
   </body>
