--- a/404.html
+++ b/404.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
+    <title>作品集</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
+    <meta name="description" content="threads作品集，資料庫串接練習" />
+    <meta name="keywords" content="threads" />
+    <meta name="robots" content="all" />
+    <meta itemprop="name" content="threads作品集，資料庫串接練習">
+    <meta itemprop="image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Threads_%28app%29.svg/640px-Threads_%28app%29.svg.png">
+    <meta property="og:site_name" content="threads作品集" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="threads作品集" />
+    <meta property="og:description" content="threads作品集，資料庫串接練習" />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Threads_%28app%29.svg/640px-Threads_%28app%29.svg.png" />
+    <link rel="icon" href="https://static.cdninstagram.com/rsrc.php/ye/r/lEu8iVizmNW.ico" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
+    <link id="app-theme" rel="stylesheet" href="%PUBLIC_URL%/themes/viva-dark/theme.css">
+    <link rel="image_src" type="image/jpeg" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Threads_%28app%29.svg/640px-Threads_%28app%29.svg.png" />
     <script type="text/javascript">
-
       const pathSegmentsToKeep = 1;
-
       const l = window.location;
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
@@ -15,7 +29,6 @@
         (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
         l.hash
       );
-
     </script>
   </head>
   <body>
